[package]
name = "tts-overlay"
version = "0.1.0"
edition = "2024"
license = "BSD-3"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
clap_derive = "4.5.49"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "signal"] }
gtk4 = { version = "0.10.1", features = ["v4_6", "v4_12", "gio_v2_80"] }
gtk4-layer-shell = "0.6.3"
anyhow = "1.0.100"
directories = "6.0.0"
users = "0.11.0"
nix = "0.30.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
etcetera = "0.10.0"